[build-system]
requires = ["setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "optisolveapi"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.7"
authors = [
  {name = "Aleksei Udovenko", email = "aleksei@affine.group"}
]
description = "Optimization & Solving common API (SAT, MILP, etc.)"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["optimization", "solving", "satisfiability", "cnf", "milp"]

[project.optional-dependencies]
glpk = ["swiglpk"]
pysat = ["python-sat"]
scip = ["pyscipopt"]
gurobi = ["gurobipy"]

[project.urls]
# Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/hellman/optisolveapi"